use padding instead of margin to prevent overflow

--- a/client/src/styles/modules/_new.scss
+++ b/client/src/styles/modules/_new.scss
@@ -1,12 +1,13 @@
 .new-gulpfile{
   display: block;
-  margin: 6.25rem auto 0;
+  margin: 0 auto;
   max-width: 850px;
+  padding-top: 6.25rem;
   text-align: center;
   width: 100%;
   
   @include phone {
-    margin-top: 1rem; 
+    padding-top: 1rem;
   }
   
   ::placeholder{
